<resources>
    <string name="app_name">ReciteWord</string>
    <string name="netErrorStr">网络错误</string>
    <string name="netExceptionStr">网络异常，请稍后再进入</string>
    <string name="enterAccount">请填写用户名/账号/手机号</string>
    <string name="enterPwd">请填写密码</string>
    <string name="remberPwd">记住密码</string>
    <string name="login">登 录</string>
    <string name="forgotPwd">忘记密码?</string>
    <string name="sendVerificationCode">获取验证码</string>
    <string name="pressOutAPP">再按一次退出程序</string>
    <string name="pleaseEnterpwd">请输入密码</string>
    <string name="enterMoreSixNumber">请输入6位以上密码</string>
    <string name="enterPhoneNumber">请填写手机号码</string>
    <string name="enterPleaseVerification">请输入验证码</string>
    <string name="resetPwdForPhone">手机号重置密码</string>
    <string name="resetPwdForPsyCard">一卡通号重置密码</string>
    <string name="reSend">重新发送</string>
    <string name="nextStep">下一步</string>
    <string name="enterPsyCodeNumber">请填写一卡通号</string>
    <string name="usePsyNumReset">通过一卡通号重置密码</string>
    <string name="contactAdministrators">如仍无法重置密码，请联系您所在学校的小思管理员</string>
    <string name="howTakeBindCard">您可以在微信“小思成长日记教师号”\n绑定自己的一卡通</string>
    <string name="enterNewpwd">请输入新密码</string>
    <string name="enteragainNewpwd">请再次输入新密码</string>
    <string name="pressOutAPPStr">再按一次退出程序</string>
    <string name="last_week_grant_total">上周发章总量</string>
    <string name="mei">枚</string>
    <string name="this_week_grant_total">本周发章总量</string>
    <string name="last_week_focus_total">上周关注学生数</string>
    <string name="ren">人</string>
    <string name="this_week_focus_total">本周关注学生数</string>
    <string name="phoneNumberException">手机号长度不正确</string>
    <string name="VerCodeNumberException">验证码长度不正确</string>
    <string name="digest">摘要</string>
    <string name="grant_total">总发章量</string>
    <string name="day_average_grant">日均发章</string>
    <string name="platform_ranking">平台排名</string>
    <string name="ming">名</string>
    <string name="day_average_praise">日均表扬</string>
    <string name="use_day_num">使用天数</string>
    <string name="day">日</string>
    <string name="day_average_criticize">日均批评</string>
    <string name="add_up_focus">累计关注</string>
    <string name="day_average_focus">日均关注</string>
    <string name="dynamics">动态</string>
    <string name="myDynamics">我的动态</string>
    <string name="schoolDynamics">全校动态</string>
    <string name="rank">排行榜</string>
    <string name="LasttimeRankStudentByWeak">上周最佳同学</string>
    <string name="LasttimeRankClassByWeak">上周最佳班集体</string>
    <string name="LasttimeRankTeacherByWeak">上周最积极教师</string>
    <string name="serialNumber">名次</string>
    <string name="name">姓名</string>
    <string name="totalScore">总评</string>
    <string name="praiseNum">表扬</string>
    <string name="criticismNum">批评</string>
    <string name="className">班级</string>
    <string name="teacher">教师</string>
    <string name="badgeDetails">颁发徽章记录详情</string>
    <string name="prize">奖品兑换</string>
    <string name="followclass">关注班级</string>
    <string name="commonusebadge">常用徽章</string>
    <string name="usehelp">使用帮助</string>
    <string name="feedback">反馈意见</string>
    <string name="setting">设置</string>
    <string name="voiceswitch">音效开关</string>
    <string name="campus">校区</string>
    <string name="logout">退出登录</string>
    <string name="resetPwd">重置密码</string>
    <string name="bindPhoneNumber">绑定手机号</string>
    <string name="logouttag">确定退出登录？</string>
    <string name="tip">提示</string>
    <string name="newPwdRule">新密码必须由6位及以上的数字+字母组成</string>
    <string name="oneAccNumberOneUserStr">一个手机号只能绑定一个账号</string>
    <string name="feedBack">反馈意见</string>
    <string name="submit">提交</string>
    <string name="your_attention_class_is">您的关注班级为：</string>
    <string name="no_class_you_attention">您暂未关注班级</string>
    <string name="student_name">学生姓名</string>
    <string name="criticize_total_num">表扬/获章量</string>
    <string name="parents_respond">家长回复</string>
    <string name="class_binding_situation">班级绑定情况:</string>
    <string name="camera">相机</string>
    <string name="photos">相册</string>
    <string name="cropField">切图失败</string>
    <string name="allSendBadge">发章总数</string>
    <string name="Scan_badge">扫描徽章</string>
    <string name="badge_name">徽章名称：</string>
    <string name="ScanButtonName">批量颁发徽章 / Ta没有戴徽章</string>
    <string name="add_describe">添加描述</string>
    <string name="please_enter_comments_to_the_students">请输入对学生的评语</string>
    <string name="SendBadge">发章</string>
    <string name="notChoisePicStr">还没有选择图片</string>
    <string name="__picker_title">图片选择</string>
    <string name="__picker_delete">删除</string>
    <string name="__picker_done">完成</string>
    <string name="__picker_done_with_count">完成(%1$d/%2$d)</string>
    <string name="__picker_image_index">%1$d/%2$d</string>
    <string name="__picker_undo">撤消</string>
    <string name="__picker_deleted_a_photo">删除了一张图片</string>
    <string name="__picker_confirm_to_delete">确认删除？</string>
    <string name="__picker_cancel">取消</string>
    <string name="__picker_all_image">所有图片</string>
    <string name="__picker_over_max_count_tips">你最多可以选择%1$d张图片</string>
    <string name="__picker_image_count">%1$d张</string>
    <string name="__picker_preview">预览</string>
    <string name="__picker_yes">确定</string>
    <string name="cancleFollow">取消关注</string>
    <string name="follow">关注</string>
    <string name="to_set_follow_class">设置更多关注班级</string>
    <string name="submitSuccess">提交成功</string>
    <string name="editSuccess">修改成功</string>
    <string name="delSuccess">删除成功</string>
    <string name="notLengthException">一卡通账号或验证码长度不正确</string>
    <string name="pwdNotSame">两次密码输入不一致</string>
    <string name="numberNotBind">手机号未绑定一卡通，请先绑定</string>
    <string name="alerdyBindPhone">该手机号已被绑定</string>
    <string name="bindSuccess">绑定成功</string>
    <string name="newPwdShort">新密码过短</string>
    <string name="alreadyBadge">已选徽章</string>
    <string name="frequentUseBadge">常用徽章</string>
    <string name="choiseBadge">选择徽章</string>
    <string name="check_all">全选</string>
    <string name="stu_num">学号</string>
    <string name="attention">关注度</string>
    <string name="changeclass">选择班级</string>
    <string name="changestu">选择学生</string>
    <string name="sendTo">颁发给</string>
    <string name="classmate">同学</string>
    <string name="selectBadge">选择徽章</string>
    <string name="student_grow_up">学生成长</string>
    <string name="develop_milestone">发展里程碑</string>
    <string name="daily_performance">日常行为表现</string>
    <string name="dynamicsNoData">您还没有评价学生，快去发章给学生个奖励吧！</string>
    <string name="noMoreData">无更多信息</string>
    <string name="schoolDynamicNoData">您学校尚未有人发章，快去争当第一人吧~</string>
    <string name="sendBadgeByTeacherName">由%1$s颁发给</string>
    <string name="sendBadgeTime">颁发徽章时间</string>
    <string name="sendBadgeDetails">颁发徽章明细</string>
    <string name="sendbadgeDescribe">颁发徽章描述</string>
    <string name="withdrawSuccess">撤回成功</string>
    <string name="low_grade">低年级</string>
    <string name="high_grade">中高年级</string>
    <string name="interest_in_learning">学习兴趣</string>
    <string name="study_habits">学习习惯</string>
    <string name="develop_milestone_progress">发展里程碑进度</string>
    <string name="me">我</string>
    <string name="nothing">无</string>
    <string name="reload">重新加载</string>
    <string name="praise">表扬</string>
    <string name="critical">批评</string>
    <string name="teacher_name">教师姓名</string>
    <string name="focus_on_index">关注指数</string>
    <string name="ignore">忽略</string>
    <string name="parent">家长</string>
    <string name="replay">回复：</string>
    <string name="systemNotificaiton">系统通知</string>
    <string name="schoolNotification">学校通知</string>
    <string name="parentReplay">家长回复</string>
    <string name="clear">清空</string>
    <string name="descending_order_by_number">按数量降序排列</string>
    <string name="message">消息</string>
    <string name="badge_name2">徽章名称</string>
    <string name="num">数量</string>
    <string name="dailyPerformance">日常行为表现</string>
    <string name="last_week">上周</string>
    <string name="this_week">本周</string>
    <string name="issued_badge_preview">发章预览</string>
    <string name="this_time">本次</string>
    <string name="issue_to">颁发给</string>
    <string name="play_up">加油吧！</string>
    <string name="congratulations">恭喜您！</string>
    <string name="no_badge">该分类没有徽章</string>
    <string name="spaceTeacher">  老师</string>
    <string name="unBind">未绑定</string>
    <string name="noCameraPermissions">在设置-应用-小思徽章-权限中开启相机权限，以正常使用相机</string>
    <string name="permissionApp">权限申请</string>
    <string name="goSetting">去设置</string>
    <string name="showBigImg">查看大图</string>
    <string name="filter">筛选条件:</string>
    <string name="clickRightFilter">点击右侧进行筛选</string>
    <string name="revoke">撤销</string>
    <string name="revokeSuccess">撤回成功</string>
    <string name="revokeAll">撤回本批次全部徽章</string>
    <string name="recommendBadge">推荐徽章</string>
    <string name="norecommendBadgeTag">您暂未设置常用徽章\n点此设置最多6枚个人常用徽章</string>
    <string name="sendBadgeSucc">发章成功</string>
    <string name="uploadorginalpic">上传原图</string>
    <string name="unfortunately">很遗憾</string>
    <string name="parentalReply">家长回复情况</string>
    <string name="datadeleted">该数据已被删除</string>
    <string name="noRankData">暂无排行榜数据</string>
    <string name="netBadAndRequest">当前网络信号差，请稍后再试</string>
    <string name="classBindStatus">班级绑定情况</string>
    <string name="classbindTip">若有学生转入转出，请联系小思添加或删除账号。\n一卡通号和学生唯一绑定，如果更换学生，则会造成数据不对应。</string>
    <string name="editName">修改姓名</string>
    <string name="weekGroupUp">每周成长值</string>
    <string name="classPer">课堂表现</string>
    <string name="conductNorm">行为规范</string>
    <string name="thoughtMorality">思想品德</string>
    <string name="getHonor">荣誉获奖</string>
    <string name="monthFollow">月度零关注</string>
    <string name="encourageStudent">需鼓励学生</string>
    <string name="studentBalance">学生均衡度</string>
    <string name="developEvenness">发展均衡度</string>
    <string name="classBast">班级最好方面</string>
    <string name="allBind">全部绑定</string>
    <string name="classGrowUpValue">班级成长值：</string>
    <string name="monthStart">月度班级之星：</string>
    <string name="paynumber">费用</string>
    <string name="prizeList">奖品列表</string>
    <string name="prizeDetail">奖品详情</string>
    <string name="addprize">添加奖品</string>
    <string name="prizeCover">奖品封面</string>
    <string name="prizeName">奖品名称</string>
    <string name="sender">发布人</string>
    <string name="condition">兑换条件</string>
    <string name="Range">兑换范围/数量/费用</string>
    <string name="RangeDefaultText">全校/100/50</string>
    <string name="pleaseSet">请设置</string>
    <string name="endTime">截止时间</string>
    <string name="prizeDes">奖品简介</string>
    <string name="pleaseEnterDes">请填写简介</string>
    <string name="rangemsg">学生的荣誉点和金币数大于</string>
    <string name="clickSet">点击设置</string>
    <string name="ryd">荣誉点</string>
    <string name="rangedialogtitle">荣誉点和金币数大于</string>
    <string name="moneynumber">金币数</string>
    <string name="enterText">请输入内容</string>
    <string name="conditionsStr">兑换条件</string>
    <string name="choise">请选择</string>
    <string name="prizeCount">奖品数量</string>
    <string name="onePassGet">一键设置荣誉点</string>
    <string name="recommendFun">推荐兑换方式</string>
    <string name="money">金币</string>
    <string name="free">免费</string>
    <string name="RangeArea">兑换范围</string>
    <string name="selectionrange">选择范围</string>
    <string name="allschool">全校</string>
    <string name="forArea">按校区发布</string>
    <string name="forLevel">按年级发布</string>
    <string name="forClass">按班级发布</string>
    <string name="exchangedMsg">提示: 添加兑换学生会扣除其荣誉点</string>
    <string name="exchangedListInfo">已发放名单</string>
    <string name="addStudent">添加学生</string>
    <string name="addMoreStudent">批量添加学生</string>
    <string name="notMoreRyd">该学生荣誉点不够</string>
    <string name="badgeFilter">徽章筛选</string>
    <string name="selectedStu">已选学生</string>
    <string name="prjgroupdelete">确认删除小组？</string>
</resources>